# handshake-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
handshake_mcp/: __init__.py  __main__.py  auth.py  cli_main.py  client.py  exceptions.py  server.py
handshake_mcp/tools/: __init__.py  applications.py  employers.py  jobs.py  profile.py
src/handshake_mcp/: __main__.py  auth.py  client.py  server.py
src/handshake_mcp/tools/: __init__.py  applications.py  employers.py  jobs.py  profile.py
tests/: conftest.py  test_applications.py  test_employers.py  test_jobs.py  test_tools.py
